test/tests/stages/17_supporting_dynamic_memory_allocation/valid/sizeof/sizeof_basic_types.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[126]:
  int
  identifier(main)
  (
  void
  )
  {
  if
  (
  sizeof
  (
  char
  )
  !=
  const int(1)
  )
  {
  return
  const int(1)
  ;
  }
  if
  (
  sizeof
  (
  signed
  char
  )
  !=
  const int(1)
  )
  {
  return
  const int(2)
  ;
  }
  if
  (
  sizeof
  (
  unsigned
  char
  )
  !=
  const int(1)
  )
  {
  return
  const int(3)
  ;
  }
  if
  (
  sizeof
  (
  int
  )
  !=
  const int(4)
  )
  {
  return
  const int(4)
  ;
  }
  if
  (
  sizeof
  (
  unsigned
  int
  )
  !=
  const int(4)
  )
  {
  return
  const int(5)
  ;
  }
  if
  (
  sizeof
  (
  long
  )
  !=
  const int(8)
  )
  {
  return
  const int(6)
  ;
  }
  if
  (
  sizeof
  (
  unsigned
  long
  )
  !=
  const int(8)
  )
  {
  return
  const int(7)
  ;
  }
  if
  (
  sizeof
  (
  double
  )
  !=
  const int(8)
  )
  {
  return
  const int(8)
  ;
  }
  return
  const int(0)
  ;
  }
