test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/incomplete_types/void_array_in_param_type.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[24]:
  int
  identifier(arr)
  (
  void
  identifier(foo)
  [
  const int(3)
  ]
  )
  {
  return
  const int(3)
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
